* Fix bug: error dark mode.

--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
     <footer>
         <div class="container">
             <p data-i18n="footer.copyright">© 2026 FinCalc. All rights reserved.</p>
-            <p style="margin-bottom: 8px;">
-                <a href="privacy.html" style="color: #94a3b8; margin-right: 16px;" data-i18n="footer.privacy">Privacy Policy</a>
-                <a href="terms.html" style="color: #94a3b8;" data-i18n="footer.terms">Terms of Service</a>
+            <p class="footer-links">
+                <a href="privacy.html" data-i18n="footer.privacy">Privacy Policy</a>
+                <a href="terms.html" data-i18n="footer.terms">Terms of Service</a>
             </p>
             <p class="disclaimer" data-i18n="footer.disclaimer">Disclaimer: These calculators are for informational purposes only. Consult a qualified financial advisor for personalized advice.</p>
         </div>
