* Fix bug: lost i18n texts.

--- a/index.html
+++ b/index.html
@@ -159,182 +159,182 @@
     <main id="main-content">
         <section class="hero">
             <div class="container">
-                <h1>Free Financial Calculators</h1>
-                <p>Make smarter financial decisions with our easy-to-use calculators. No signup required, 100% free.</p>
+                <h1 data-i18n="hero.title">Free Financial Calculators</h1>
+                <p data-i18n="hero.subtitle">Make smarter financial decisions with our easy-to-use calculators. No signup required, 100% free.</p>
             </div>
         </section>
 
         <section id="calculators" class="calculators-grid">
             <div class="container">
-                <h2>Financial Tools</h2>
-                <p>Choose from our collection of free calculators to help you plan your financial future.</p>
+                <h2 data-i18n="site.tagline">Financial Tools</h2>
+                <p data-i18n="site.description">Choose from our collection of free calculators to help you plan your financial future.</p>
 
                 <!-- Home & Mortgage -->
                 <div class="category">
-                    <h3 class="category-title">Home & Mortgage</h3>
+                    <h3 class="category-title" data-i18n="categories.homeMortgage">Home & Mortgage</h3>
                     <div class="grid">
                         <a href="calculators/mortgage.html" class="calc-card">
                             <div class="calc-icon">🏠</div>
-                            <h3>Mortgage Calculator</h3>
-                            <p>Calculate monthly payments, total interest, and view amortization schedule.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.mortgage.title">Mortgage Calculator</h3>
+                            <p data-i18n="calculators.mortgage.desc">Calculate monthly payments, total interest, and view amortization schedule.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/refinance.html" class="calc-card blue">
                             <div class="calc-icon">🔄</div>
-                            <h3>Refinance Calculator</h3>
-                            <p>See if refinancing your mortgage could save you money.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.refinance.title">Refinance Calculator</h3>
+                            <p data-i18n="calculators.refinance.desc">See if refinancing your mortgage could save you money.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/rent-vs-buy.html" class="calc-card purple">
                             <div class="calc-icon">🏘️</div>
-                            <h3>Rent vs Buy Calculator</h3>
-                            <p>Compare the costs of renting versus buying a home.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.rentVsBuy.title">Rent vs Buy Calculator</h3>
+                            <p data-i18n="calculators.rentVsBuy.desc">Compare the costs of renting versus buying a home.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/home-affordability.html" class="calc-card green">
                             <div class="calc-icon">💵</div>
-                            <h3>Home Affordability</h3>
-                            <p>Find out how much house you can afford based on your income.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.homeAffordability.title">Home Affordability</h3>
+                            <p data-i18n="calculators.homeAffordability.desc">Find out how much house you can afford based on your income.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
                     </div>
                 </div>
 
                 <!-- Loans & Debt -->
                 <div class="category">
-                    <h3 class="category-title">Loans & Debt</h3>
+                    <h3 class="category-title" data-i18n="categories.loansDebt">Loans & Debt</h3>
                     <div class="grid">
                         <a href="calculators/loan-payoff.html" class="calc-card amber">
                             <div class="calc-icon">💳</div>
-                            <h3>Loan Payoff Calculator</h3>
-                            <p>See how extra payments can help you pay off loans faster.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.loanPayoff.title">Loan Payoff Calculator</h3>
+                            <p data-i18n="calculators.loanPayoff.desc">See how extra payments can help you pay off loans faster.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/debt-payoff.html" class="calc-card rose">
                             <div class="calc-icon">📊</div>
-                            <h3>Debt Payoff Planner</h3>
-                            <p>Create a debt payoff plan using snowball or avalanche method.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.debtPayoff.title">Debt Payoff Planner</h3>
+                            <p data-i18n="calculators.debtPayoff.desc">Create a debt payoff plan using snowball or avalanche method.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/auto-loan.html" class="calc-card">
                             <div class="calc-icon">🚗</div>
-                            <h3>Auto Loan Calculator</h3>
-                            <p>Calculate car loan payments and total cost of financing.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.autoLoan.title">Auto Loan Calculator</h3>
+                            <p data-i18n="calculators.autoLoan.desc">Calculate car loan payments and total cost of financing.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/student-loan.html" class="calc-card blue">
                             <div class="calc-icon">🎓</div>
-                            <h3>Student Loan Calculator</h3>
-                            <p>Plan your student loan repayment and explore forgiveness options.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.studentLoan.title">Student Loan Calculator</h3>
+                            <p data-i18n="calculators.studentLoan.desc">Plan your student loan repayment and explore forgiveness options.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
                     </div>
                 </div>
 
                 <!-- Savings & Investment -->
                 <div class="category">
-                    <h3 class="category-title">Savings & Investment</h3>
+                    <h3 class="category-title" data-i18n="categories.savingsInvestment">Savings & Investment</h3>
                     <div class="grid">
                         <a href="calculators/compound-interest.html" class="calc-card green">
                             <div class="calc-icon">📈</div>
-                            <h3>Compound Interest</h3>
-                            <p>See how your investments grow over time with compound interest.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.compoundInterest.title">Compound Interest</h3>
+                            <p data-i18n="calculators.compoundInterest.desc">See how your investments grow over time with compound interest.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/investment-return.html" class="calc-card">
                             <div class="calc-icon">💰</div>
-                            <h3>Investment Return (ROI)</h3>
-                            <p>Calculate ROI and compare different investment scenarios.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.investmentReturn.title">Investment Return (ROI)</h3>
+                            <p data-i18n="calculators.investmentReturn.desc">Calculate ROI and compare different investment scenarios.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/savings-goal.html" class="calc-card purple">
                             <div class="calc-icon">🎯</div>
-                            <h3>Savings Goal Calculator</h3>
-                            <p>Find out how much to save monthly to reach your goal.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.savingsGoal.title">Savings Goal Calculator</h3>
+                            <p data-i18n="calculators.savingsGoal.desc">Find out how much to save monthly to reach your goal.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/emergency-fund.html" class="calc-card amber">
                             <div class="calc-icon">🛡️</div>
-                            <h3>Emergency Fund</h3>
-                            <p>Calculate how much you need in your emergency fund.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.emergencyFund.title">Emergency Fund</h3>
+                            <p data-i18n="calculators.emergencyFund.desc">Calculate how much you need in your emergency fund.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
                     </div>
                 </div>
 
                 <!-- Retirement -->
                 <div class="category">
-                    <h3 class="category-title">Retirement Planning</h3>
+                    <h3 class="category-title" data-i18n="categories.retirement">Retirement Planning</h3>
                     <div class="grid">
                         <a href="calculators/retirement.html" class="calc-card">
                             <div class="calc-icon">🏖️</div>
-                            <h3>Retirement Calculator</h3>
-                            <p>Plan your retirement savings and see if you're on track.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.retirement.title">Retirement Calculator</h3>
+                            <p data-i18n="calculators.retirement.desc">Plan your retirement savings and see if you're on track.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/401k.html" class="calc-card green">
                             <div class="calc-icon">📋</div>
-                            <h3>401(k) Calculator</h3>
-                            <p>Maximize your 401(k) contributions and employer matching.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.calc401k.title">401(k) Calculator</h3>
+                            <p data-i18n="calculators.calc401k.desc">Maximize your 401(k) contributions and employer matching.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/social-security.html" class="calc-card blue">
                             <div class="calc-icon">🏛️</div>
-                            <h3>Social Security Estimator</h3>
-                            <p>Estimate your Social Security benefits at different ages.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.socialSecurity.title">Social Security Estimator</h3>
+                            <p data-i18n="calculators.socialSecurity.desc">Estimate your Social Security benefits at different ages.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/roth-vs-traditional.html" class="calc-card purple">
                             <div class="calc-icon">⚖️</div>
-                            <h3>Roth vs Traditional IRA</h3>
-                            <p>Compare Roth and Traditional IRA to find the best option.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.rothVsTraditional.title">Roth vs Traditional IRA</h3>
+                            <p data-i18n="calculators.rothVsTraditional.desc">Compare Roth and Traditional IRA to find the best option.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
                     </div>
                 </div>
 
                 <!-- Tax & Income -->
                 <div class="category">
-                    <h3 class="category-title">Tax & Income</h3>
+                    <h3 class="category-title" data-i18n="categories.taxIncome">Tax & Income</h3>
                     <div class="grid">
                         <a href="calculators/salary.html" class="calc-card amber">
                             <div class="calc-icon">💼</div>
-                            <h3>Salary Calculator</h3>
-                            <p>Convert between hourly, weekly, monthly, and annual salary.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.salary.title">Salary Calculator</h3>
+                            <p data-i18n="calculators.salary.desc">Convert between hourly, weekly, monthly, and annual salary.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/take-home-pay.html" class="calc-card">
                             <div class="calc-icon">🧾</div>
-                            <h3>Take-Home Pay</h3>
-                            <p>Calculate your net pay after taxes and deductions.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.takeHomePay.title">Take-Home Pay</h3>
+                            <p data-i18n="calculators.takeHomePay.desc">Calculate your net pay after taxes and deductions.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/self-employment-tax.html" class="calc-card rose">
                             <div class="calc-icon">📝</div>
-                            <h3>Self-Employment Tax</h3>
-                            <p>Estimate self-employment taxes for freelancers and contractors.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.selfEmploymentTax.title">Self-Employment Tax</h3>
+                            <p data-i18n="calculators.selfEmploymentTax.desc">Estimate self-employment taxes for freelancers and contractors.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
 
                         <a href="calculators/inflation.html" class="calc-card blue">
                             <div class="calc-icon">📉</div>
-                            <h3>Inflation Calculator</h3>
-                            <p>See how inflation affects your purchasing power over time.</p>
-                            <span class="arrow">Calculate →</span>
+                            <h3 data-i18n="calculators.inflation.title">Inflation Calculator</h3>
+                            <p data-i18n="calculators.inflation.desc">See how inflation affects your purchasing power over time.</p>
+                            <span class="arrow" data-i18n="common.calculateArrow">Calculate →</span>
                         </a>
                     </div>
                 </div>
@@ -344,27 +344,27 @@
 
         <section id="about" class="about">
             <div class="container">
-                <h2>Why Use Our Calculators?</h2>
+                <h2 data-i18n="about.title">Why Use Our Calculators?</h2>
                 <div class="features">
                     <div class="feature">
                         <div class="feature-icon">✓</div>
-                        <h3>100% Free</h3>
-                        <p>All calculators are completely free. No hidden fees, no premium features to unlock.</p>
+                        <h3 data-i18n="about.free.title">100% Free</h3>
+                        <p data-i18n="about.free.desc">All calculators are completely free. No hidden fees, no premium features to unlock.</p>
                     </div>
                     <div class="feature">
                         <div class="feature-icon">⚡</div>
-                        <h3>No Signup Required</h3>
-                        <p>Start calculating immediately. We don't ask for your email or personal information.</p>
+                        <h3 data-i18n="about.noSignup.title">No Signup Required</h3>
+                        <p data-i18n="about.noSignup.desc">Start calculating immediately. We don't ask for your email or personal information.</p>
                     </div>
                     <div class="feature">
                         <div class="feature-icon">🔒</div>
-                        <h3>Privacy First</h3>
-                        <p>All calculations happen in your browser. Your financial data never leaves your device.</p>
+                        <h3 data-i18n="about.privacy.title">Privacy First</h3>
+                        <p data-i18n="about.privacy.desc">All calculations happen in your browser. Your financial data never leaves your device.</p>
                     </div>
                     <div class="feature">
                         <div class="feature-icon">📱</div>
-                        <h3>Mobile Friendly</h3>
-                        <p>Use our calculators on any device - phone, tablet, or desktop computer.</p>
+                        <h3 data-i18n="about.mobile.title">Mobile Friendly</h3>
+                        <p data-i18n="about.mobile.desc">Use our calculators on any device - phone, tablet, or desktop computer.</p>
                     </div>
                 </div>
             </div>
