--- a/calculators/401k.html
+++ b/calculators/401k.html
@@ -238,6 +238,15 @@
                     <li>Consider target-date funds for automatic rebalancing</li>
                     <li>Review and rebalance your portfolio annually</li>
                 </ul>
+
+                <div class="related-articles" style="margin-top: 30px; padding: 20px; background: var(--bg-alt); border-radius: 8px;">
+                    <h3>Related Articles</h3>
+                    <ul style="list-style: none; padding: 0; margin: 15px 0 0 0;">
+                        <li style="margin-bottom: 12px;"><a href="/blog/401k-contribution-calculator-2025.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">How Much Should I Contribute to My 401(k) in 2026?</a> - Updated limits and strategies</li>
+                        <li style="margin-bottom: 12px;"><a href="/blog/retirement-calculator-teachers.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">Retirement Calculator for Teachers</a> - Special considerations for educators</li>
+                        <li style="margin-bottom: 12px;"><a href="/blog/freelancer-self-employment-tax-guide.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">Self-Employment Retirement Options</a> - Solo 401(k) and SEP IRA for freelancers</li>
+                    </ul>
+                </div>
             </article>
         </div>
     </main>
