--- a/calculators/debt-payoff.html
+++ b/calculators/debt-payoff.html
@@ -262,6 +262,15 @@
                     <li>Consider balance transfer cards for high-interest debt</li>
                     <li>Avoid taking on new debt while paying off existing debt</li>
                 </ul>
+
+                <div class="related-articles" style="margin-top: 30px; padding: 20px; background: var(--bg-alt); border-radius: 8px;">
+                    <h3>Related Articles</h3>
+                    <ul style="list-style: none; padding: 0; margin: 15px 0 0 0;">
+                        <li style="margin-bottom: 12px;"><a href="/blog/debt-snowball-vs-avalanche.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">Debt Snowball vs Avalanche: Which Method is Better?</a> - In-depth comparison of both strategies</li>
+                        <li style="margin-bottom: 12px;"><a href="/blog/how-to-pay-off-50000-student-loans.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">How to Pay Off $50,000 in Student Loans</a> - Strategies for tackling student debt</li>
+                        <li style="margin-bottom: 12px;"><a href="/blog/emergency-fund-3-vs-6-months.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">Emergency Fund: 3 or 6 Months?</a> - Build your safety net while paying off debt</li>
+                    </ul>
+                </div>
             </article>
         </div>
     </main>
