--- a/calculators/home-affordability.html
+++ b/calculators/home-affordability.html
@@ -205,6 +205,15 @@
                     <li>Consider all costs: taxes, insurance, maintenance, HOA fees</li>
                     <li>Save for a 20% down payment to avoid PMI</li>
                 </ul>
+
+                <div class="related-articles" style="margin-top: 30px; padding: 20px; background: var(--bg-alt); border-radius: 8px;">
+                    <h3>Related Articles</h3>
+                    <ul style="list-style: none; padding: 0; margin: 15px 0 0 0;">
+                        <li style="margin-bottom: 12px;"><a href="/blog/how-much-house-can-i-afford-80k-salary.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">How Much House Can I Afford on an $80K Salary?</a> - Real examples and calculations</li>
+                        <li style="margin-bottom: 12px;"><a href="/blog/first-time-homebuyer-mortgage-guide.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">First-Time Homebuyer's Mortgage Guide</a> - Everything you need to know</li>
+                        <li style="margin-bottom: 12px;"><a href="/blog/emergency-fund-3-vs-6-months.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">Emergency Fund: 3 or 6 Months?</a> - Build your safety net before buying</li>
+                    </ul>
+                </div>
             </article>
         </div>
     </main>
