--- a/calculators/mortgage.html
+++ b/calculators/mortgage.html
@@ -332,6 +332,15 @@
                     <li>Consider a shorter loan term for lower interest rates</li>
                     <li>Lock in your rate when you find a good deal</li>
                 </ul>
+
+                <div class="related-articles" style="margin-top: 30px; padding: 20px; background: var(--bg-alt); border-radius: 8px;">
+                    <h3>Related Articles</h3>
+                    <ul style="list-style: none; padding: 0; margin: 15px 0 0 0;">
+                        <li style="margin-bottom: 12px;"><a href="/blog/how-much-house-can-i-afford-80k-salary.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">How Much House Can I Afford on an $80K Salary?</a> - Calculate your home buying budget</li>
+                        <li style="margin-bottom: 12px;"><a href="/blog/first-time-homebuyer-mortgage-guide.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">First-Time Homebuyer's Mortgage Guide</a> - Everything you need to know about getting your first mortgage</li>
+                        <li style="margin-bottom: 12px;"><a href="/blog/emergency-fund-3-vs-6-months.html" style="color: var(--primary); text-decoration: none; font-weight: 500;">Emergency Fund: 3 or 6 Months?</a> - Build your safety net before buying a home</li>
+                    </ul>
+                </div>
             </article>
         </div>
     </main>
