--- a/calculators/debt-payoff.html
+++ b/calculators/debt-payoff.html
@@ -44,6 +44,7 @@
     </script>
 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/premium.css">
     <style>
         .debt-input-group {
@@ -291,6 +292,8 @@
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     <script src="../js/i18n.js"></script>
+    <!-- Sidebar Navigation -->
+    <script src="../js/sidebar.js"></script>
     <script src="../js/debt-payoff.js"></script>
     <script src="../js/monetization.js"></script>
     <script src="../js/premium.js"></script>
