--- a/calculators/take-home-pay.html
+++ b/calculators/take-home-pay.html
@@ -31,6 +31,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/premium.css">
     <style>
         .deduction td:nth-child(2), .deduction td:nth-child(3) {
@@ -344,6 +345,8 @@
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     <script src="../js/i18n.js"></script>
+    <!-- Sidebar Navigation -->
+    <script src="../js/sidebar.js"></script>
     <script src="../js/take-home-pay.js"></script>
     <script src="../js/monetization.js"></script>
     <script src="../js/premium.js"></script>
