--- a/calculators/auto-loan.html
+++ b/calculators/auto-loan.html
@@ -44,6 +44,7 @@
     </script>
 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/premium.css">
 </head>
 <body>
@@ -237,6 +238,8 @@
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     <script src="../js/i18n.js"></script>
+    <!-- Sidebar Navigation -->
+    <script src="../js/sidebar.js"></script>
     <script src="../js/auto-loan.js"></script>
     <script src="../js/monetization.js"></script>
     <script src="../js/premium.js"></script>
