--- a/calculators/investment-return.html
+++ b/calculators/investment-return.html
@@ -44,6 +44,7 @@
     </script>
 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/premium.css">
 </head>
 <body>
@@ -165,6 +166,8 @@
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     <script src="../js/i18n.js"></script>
+    <!-- Sidebar Navigation -->
+    <script src="../js/sidebar.js"></script>
     <script src="../js/investment-return.js"></script>
     <script src="../js/monetization.js"></script>
     <script src="../js/premium.js"></script>
