--- a/calculators/mortgage.html
+++ b/calculators/mortgage.html
@@ -160,6 +160,7 @@
     <script src="/js/seo.js" defer></script>
 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/premium.css">
 </head>
 <body>
@@ -361,6 +362,8 @@
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     <script src="../js/i18n.js"></script>
+    <!-- Sidebar Navigation -->
+    <script src="../js/sidebar.js"></script>
     <script src="../js/mortgage.js"></script>
     <script src="../js/monetization.js"></script>
     <script src="../js/premium.js"></script>
