--- a/calculators/refinance.html
+++ b/calculators/refinance.html
@@ -29,6 +29,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/premium.css">
 </head>
 <body>
@@ -231,6 +232,8 @@
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     <script src="../js/i18n.js"></script>
+    <!-- Sidebar Navigation -->
+    <script src="../js/sidebar.js"></script>
     <script src="../js/refinance.js"></script>
     <script src="../js/monetization.js"></script>
     <script src="../js/premium.js"></script>
