--- a/calculators/salary.html
+++ b/calculators/salary.html
@@ -32,6 +32,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <link rel="stylesheet" href="../css/premium.css">
 </head>
 <body>
@@ -213,6 +214,8 @@
     <script src="../js/theme.js"></script>
     <!-- Internationalization -->
     <script src="../js/i18n.js"></script>
+    <!-- Sidebar Navigation -->
+    <script src="../js/sidebar.js"></script>
     <script src="../js/salary.js"></script>
     <script src="../js/monetization.js"></script>
     <script src="../js/premium.js"></script>
