--- a/calculators/mortgage.html
+++ b/calculators/mortgage.html
@@ -226,10 +226,10 @@
                         <div class="form-group">
                             <label for="loanTerm" data-i18n="calculators.mortgage.loanTerm">Loan Term</label>
                             <select id="loanTerm">
-                                <option value="30">30 years</option>
-                                <option value="20">20 years</option>
-                                <option value="15">15 years</option>
-                                <option value="10">10 years</option>
+                                <option value="30" data-i18n="calculators.mortgage.loanTerm30">30 years</option>
+                                <option value="20" data-i18n="calculators.mortgage.loanTerm20">20 years</option>
+                                <option value="15" data-i18n="calculators.mortgage.loanTerm15">15 years</option>
+                                <option value="10" data-i18n="calculators.mortgage.loanTerm10">10 years</option>
                             </select>
                         </div>
                     </div>
